Updated Cloud Roadmap

--- a/2018.md
+++ b/2018.md
@@ -1,7 +1,23 @@
-# 2020 Technology Roadmap
-I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening lanes-and-bylanes of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the services that the **Big 3** ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com) and [Azure](https://azure.microsoft.com)) offer! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
+## 2018 Cloud Roadmap
+I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening lanes-and-bylanes of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the services that the **Fine  Four** - ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com), [DigitalOcean] (https://digitalocean.com) and [Azure](https://azure.microsoft.com)) - offer! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
 
-Things that I have spent time on will be marked with a ~~strikethough~~
+### Service Category: Identity & Security
+1. **Authentication and Authorization**
+    - AWS Identity and Access Management (IAM), AWS Organizations, AWS Single Sign-On
+    - Google Cloud IAM
+    - Azure Active Directory
+2. **Directory**
+    - AWS Cloud Directory
+    - Google Cloud Resource Manager
+    - Azure Active Directory
+3. **Encryption**
+    - AWS Key Management Service, AWS CloudHSM, AWS Certificate Manager
+    - Google Cloud Key Management Service, Google Security Key Enforcement
+    - Azure Key Vault
+4. **Misc Security Services**
+    - AWS Shield, AWS WAF, AWS GuardDuty, Amazon Inspector, Amazon Macie
+    - Google Cloud Security Scanner, Google Data Loss Prevention API, Google Cloud Identity-Aware Proxy
+    - Azure WAF, Azure App Service Certificates, Azure DDoS Protection Service
 
 ### Service Category: Compute
 1. **IaaS**
@@ -10,42 +26,42 @@ Things that I have spent time on will be marked with a ~~strikethough~~
     - Google Compute Engine (GCE)
     - Azure Virtual Machines
     - Openstack
-2. **PaaS**
+2. **Containers**
+    - Amazon Elastic Container Service (ECS), Amazon Elastic Container Service for Kubernetes (EKS)
+    - Google Kubernetes Engine (GKS), 
+    - Azure Container Service (AKS), Managed Kubernetes for AKS, Azure Container Instances
+3. **Serverless Functions**
+    - Amazon Lambda
+    - Google Cloud Functions
+    - Azure Functions
+4. **PaaS**
     - Amazon Elastic Beanstalk
     - Google App Engine (GAE)
     - Azure App Service, Azure Cloud Services
     - OpenShift, Heroku, Pivotal Cloud Foundry (PCF)
-3. **Containers**
-    - Amazon Elastic Container Service (ECS), Amazon Elastic Container Service for Kubernetes (EKS)
-    - Google Kubernetes Engine (GKS), 
-    - Azure Container Service (AKS), Managed Kubernetes for AKS, Azure Container Instances
-4. **Serverless Functions**
-    - Amazon Lambda
-    - Google Cloud Functions
-    - Azure Functions
 
 ### Service Category: Network
-1. **Load Balancer**
+1. **Virtual Networks**
+    - Amazon Virtual Private Cloud (VPC)
+    - Google Virtual Private Cloud (VPC)
+    - Azure Virtual Networks (VNets)
+2. **Load Balancer**
     - Amazon Elastic Load Balancer
     - Digital Ocean 
     - Google Cloud Load Balancing
     - Azure Load Balancer
-2. **App/API Gateway**
-    - Amazon API Gateway
-    - Google Apigee API Platform
-    - Azure Application Gateway
-3. **Virtual Networks**
-    - Amazon Virtual Private Cloud (VPC)
-    - Google Virtual Private Cloud (VPC)
-    - Azure Virtual Networks (VNets)
-4. **DNS**
+3. **DNS**
     - Amazon Route 53
     - Google Cloud DNS
     - Azure DNS
-5. **CDN**
+4. **CDN**
     - Amazon CloudFront
     - Google Cloud CDN
     - Azure CDN
+5. **App/API Gateway**
+    - Amazon API Gateway
+    - Google Apigee API Platform
+    - Azure Application Gateway
 
 ### Service Category: Storage
 1. **Object Storage**
@@ -64,17 +80,11 @@ Things that I have spent time on will be marked with a ~~strikethough~~
     - Google Cloud Storage Nearline/Coldline
     - Azure Archive Storage
 
-### Writing Software
-1. Data Structures & Algorithms
-2. Python
-3. Go
-4. Java
-
 ### Service Category: Developer & Management Tools
-1. **Development Tools**
-    - Amazon Tools & SDK, Cloud9, CodeStar, CodeCommit, CodeBuild, CodeDeploy, CodePipeline
-    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories
-    - Azure Developer Tools, Visual Studio Team Services
+1. **Configuration Management & Deployment**
+    - Amazon CloudFormation, Amazon OpsWorks, AWS Config
+    - Google Cloud Deployment Manager
+    - Azure Resource Manager, Azure Automation
 2. **Container Registry**
     - Amazon Elastic Container Registry
     - Google Container Registry, Google Container Builder
@@ -83,10 +93,10 @@ Things that I have spent time on will be marked with a ~~strikethough~~
     - Amazon X-Ray, Amazon Cloud Watch
     - Google Stackdriver (Stackdriver Monitoring, Stackdriver Logging, Stackdriver Tracing, Stackdriver Error reporting)
     - Azure Monitor, Azure Application Insights, Azure Log Analytics
-4. **Configuration Management & Deployment**
-    - Amazon CloudFormation, Amazon OpsWorks, AWS Config
-    - Google Cloud Deployment Manager
-    - Azure Resource Manager, Azure Automation
+4. **Development Tools**
+    - Amazon Tools & SDK, Cloud9, CodeStar, CodeCommit, CodeBuild, CodeDeploy, CodePipeline
+    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories
+    - Azure Developer Tools, Visual Studio Team Services
 
 ### Service Category: Application Services
 1. **RDBMS**
@@ -137,27 +147,3 @@ Things that I have spent time on will be marked with a ~~strikethough~~
     - Amazon Rekognition Image, Amazon Rekognition Video, AWS DeepLens
     - Google Cloud Vision API, Google Cloud Video Intelligence
     - Azure Computer Vision API, Azure Face API
-
-### Service Category: Identity & Security
-1. **Authentication and Authorization**
-    - AWS Identity and Access Management (IAM), AWS Organizations, AWS Single Sign-On
-    - Google Cloud IAM
-    - Azure Active Directory
-2. **Directory**
-    - AWS Cloud Directory
-    - Google Cloud Resource Manager
-    - Azure Active Directory
-3. **Encryption**
-    - AWS Key Management Service, AWS CloudHSM, AWS Certificate Manager
-    - Google Cloud Key Management Service, Google Security Key Enforcement
-    - Azure Key Vault
-4. **Misc Security Services**
-    - AWS Shield, AWS WAF, AWS GuardDuty, Amazon Inspector, Amazon Macie
-    - Google Cloud Security Scanner, Google Data Loss Prevention API, Google Cloud Identity-Aware Proxy
-    - Azure WAF, Azure App Service Certificates, Azure DDoS Protection Service
-
-### Blockchain
-1. Blockchain
-2. Bitcoim
-3. Ethereum
-
