Updated 2020 to call out a few new services!

--- a/2020.md
+++ b/2020.md
@@ -1,5 +1,5 @@
-## 2018 Cloud Roadmap
-I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening lanes-and-bylanes of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Fine  Four** - ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com), [DigitalOcean] (https://digitalocean.com) and [Azure](https://azure.microsoft.com))! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
+## 2020 Cloud Roadmap
+I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening new and newer waves of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Fantastic  Four** - ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com), [DigitalOcean] (https://digitalocean.com) and [Azure](https://azure.microsoft.com))! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
 
 ### Service Category: Identity & Security
 1. **Authentication and Authorization**
@@ -95,13 +95,13 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Azure Monitor, Azure Application Insights, Azure Log Analytics
 4. **Development Tools**
     - Amazon Tools & SDK, Cloud9, CodeStar, CodeCommit, CodeBuild, CodeDeploy, CodePipeline
-    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories
+    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories, Cloud Build
     - Azure Developer Tools, Visual Studio Team Services
 
 ### Service Category: Application Services
 1. **RDBMS**
     - Amazon RDS, Amazon Aurora
-    - Google CloudSQL, Google Spanner
+    - Google Cloud SQL, Google Cloud Bigtable, Google Cloud Spanner, Cloud Datastore, Cloud Memorystore
     - Azure Data for MySQL, Azure Database for PostgreSQL, Azure SQL Database, Azure Cosmos DB
 2. **NoSQL (Document, Key/Value and Graph)**
     - Amazon DynamoDB, Amazon ElastiCache, Amazon Neptune
