--- a/2020.md
+++ b/2020.md
@@ -1,7 +1,7 @@
 ## 2020 Cloud Roadmap
 I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening new and newer waves of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Fantastic  Four** - ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com), [DigitalOcean] (https://digitalocean.com) and [Azure](https://azure.microsoft.com))! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
 
-### Service Category: Identity & Security
+### Identity & Security
 1. **Authentication and Authorization**
     - AWS Identity and Access Management (IAM), AWS Organizations, AWS Single Sign-On
     - Google Cloud IAM
@@ -19,35 +19,28 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Google Cloud Security Scanner, Google Data Loss Prevention API, Google Cloud Identity-Aware Proxy
     - Azure WAF, Azure App Service Certificates, Azure DDoS Protection Service
 
-### Service Category: Compute
-1. **IaaS**
+### Compute
+1. **Virtual Machines**
     - Amazon Elastic Compute Cloud (EC2), Amazon Lightsail
-    - Digital Ocean Droplets
     - Google Compute Engine (GCE)
     - Azure Virtual Machines
     - Openstack
 2. **Containers**
-    - Amazon Elastic Container Service (ECS), Amazon Elastic Container Service for Kubernetes (EKS)
-    - Google Kubernetes Engine (GKS), 
+    - Amazon Elastic Container Service (ECS), Amazon Fargate, Amazon Elastic Container Service for Kubernetes (EKS)
+    - Google Kubernetes Engine (GKS), Google Cloud Run
     - Azure Container Service (AKS), Managed Kubernetes for AKS, Azure Container Instances
 3. **Serverless Functions**
     - Amazon Lambda
     - Google Cloud Functions
     - Azure Functions
-4. **PaaS**
-    - Amazon Elastic Beanstalk
-    - Google App Engine (GAE)
-    - Azure App Service, Azure Cloud Services
-    - OpenShift, Heroku, Pivotal Cloud Foundry (PCF)
 
-### Service Category: Network
+### Network
 1. **Virtual Networks**
     - Amazon Virtual Private Cloud (VPC)
     - Google Virtual Private Cloud (VPC)
     - Azure Virtual Networks (VNets)
 2. **Load Balancer**
     - Amazon Elastic Load Balancer
-    - Digital Ocean 
     - Google Cloud Load Balancing
     - Azure Load Balancer
 3. **DNS**
@@ -63,7 +56,7 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Google Apigee API Platform
     - Azure Application Gateway
 
-### Service Category: Storage
+### Storage
 1. **Object Storage**
     - Amazon Simple Storage Service (S3)
     - Google Cloud Storage
@@ -80,11 +73,11 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Google Cloud Storage Nearline/Coldline
     - Azure Archive Storage
 
-### Service Category: Developer & Management Tools
-1. **Configuration Management & Deployment**
-    - Amazon CloudFormation, Amazon OpsWorks, AWS Config
-    - Google Cloud Deployment Manager
-    - Azure Resource Manager, Azure Automation
+### Developer & Management Tools
+1. **Development Tools**
+    - Amazon Tools & SDK, Cloud9, CodeStar, CodeCommit, CodeBuild, CodeDeploy, CodePipeline
+    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories, Cloud Build
+    - Azure Developer Tools, Visual Studio Team Services
 2. **Container Registry**
     - Amazon Elastic Container Registry
     - Google Container Registry, Google Container Builder
@@ -93,13 +86,20 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Amazon X-Ray, Amazon Cloud Watch
     - Google Stackdriver (Stackdriver Monitoring, Stackdriver Logging, Stackdriver Tracing, Stackdriver Error reporting)
     - Azure Monitor, Azure Application Insights, Azure Log Analytics
-4. **Development Tools**
-    - Amazon Tools & SDK, Cloud9, CodeStar, CodeCommit, CodeBuild, CodeDeploy, CodePipeline
-    - Google Cloud SDK, Cloud Tools for IntelliJ/Eclipse, Cloud Source Repositories, Cloud Build
-    - Azure Developer Tools, Visual Studio Team Services
+4. **Configuration Management & Deployment**
+    - AWS Console, Google Cloud Console, Azure Portal
+    - aws2, gcloud, az
+    - Terraform, Ansible
+    - Amazon CloudFormation, Amazon OpsWorks, AWS Config
+    - Google Cloud Deployment Manager
+    - Azure Resource Manager, Azure Automation
+5. **App Mesh/Frameworks**
+    - AWS AppMesh, AWS Chalice, AWS Amplify, AWS Lightsail
+    - Google Istio
+    - Azure Istio
 
-### Service Category: Application Services
-1. **RDBMS**
+### Application Services
+1. **SQL**
     - Amazon RDS, Amazon Aurora
     - Google Cloud SQL, Google Cloud Bigtable, Google Cloud Spanner, Cloud Datastore, Cloud Memorystore
     - Azure Data for MySQL, Azure Database for PostgreSQL, Azure SQL Database, Azure Cosmos DB
@@ -107,30 +107,30 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Amazon DynamoDB, Amazon ElastiCache, Amazon Neptune
     - Google Bigtable, Google Cloud Datastore
     - Azure Table Storage, Azure Redis Cache
-3. **Messaging**
+3. **Events**
     - Amazon MQ, Amazon SQS, Amazon SNS
     - Google Cloud Pub/Sub
     - Azure Service Bus, Azure Queue Storage
 
-### Service Category: Big Data & Analytics
-1. **Batch Data Processing**
-    - Amazon Batch, Amazon Elastic MapReduce, 
-    - Google Cloud Dataflow, Google Dataproc
-    - Azure Batch, Azure HDInsight
-2. **Stream Data Processing**
+### Big Data & Analytics
+1. **Stream Data Processing**
     - Amazon Kinesis
     - Google Cloud Dataflow
     - Azure Stream Analytics
-3. **Stream Data Ingest**
+2. **Stream Data Ingest**
     - Amazon Kinesis
     - Google Cloud Dataflow
     - Azure Event Hubs, Azure Service Bus
+3. **Batch Data Processing**
+    - Amazon Batch, Amazon Elastic MapReduce, 
+    - Google Cloud Dataflow, Google Dataproc
+    - Azure Batch, Azure HDInsight
 4. **Data Warehouse**
     - Amazon Redshift
     - Google BigQuery
     - Azure Data Lake Analytics, Azure Data Lake Store
 
-### Service Category: Machine Learning
+### AI
 1. **Machine/Deep Learning**
     - Amazon Machine Learning, Amazon Sagemaker, Apache MXNet on AWS, Tensorflow on AWS, AWS Deep Learning AMIs
     - Google Cloud Machine Learning
