--- a/2020.md
+++ b/2020.md
@@ -1,5 +1,5 @@
 ## 2020 Cloud Roadmap
-I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening new and newer waves of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Fantastic  Four** - ([AWS](https://aws.amazon.com), [GCP](https://cloud.google.com), [DigitalOcean] (https://digitalocean.com) and [Azure](https://azure.microsoft.com))! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
+I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening new and newer waves of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Big 3** - [Azure](https://azure.microsoft.com), [AWS](https://aws.amazon.com) and [GCP](https://cloud.google.com)! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
 
 ### Identity & Security
 1. **Authentication and Authorization**
