Updated ALB info

--- a/2020.md
+++ b/2020.md
@@ -40,7 +40,7 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Google Virtual Private Cloud (VPC)
     - Azure Virtual Networks (VNets)
 2. **Load Balancer**
-    - Amazon Elastic Load Balancer
+    - Amazon Elastic Load Balancing (Application Load Balancer, Amazon Classic Load Balancer, Amazon Network Load Balancer)
     - Google Cloud Load Balancing
     - Azure Load Balancer
 3. **DNS**
@@ -95,17 +95,17 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Azure Resource Manager, Azure Automation
 5. **App Mesh/Frameworks**
     - AWS AppMesh, AWS Chalice, AWS Amplify, AWS Lightsail
-    - Google Istio
+    - Google Firebase, Google Istio
     - Azure Istio
 
 ### Application Services
 1. **SQL**
     - Amazon RDS, Amazon Aurora
-    - Google Cloud SQL, Google Cloud Bigtable, Google Cloud Spanner, Cloud Datastore, Cloud Memorystore
+    - Google Cloud SQL, Google Cloud Bigtable, Google Cloud Spanner
     - Azure Data for MySQL, Azure Database for PostgreSQL, Azure SQL Database, Azure Cosmos DB
 2. **NoSQL (Document, Key/Value and Graph)**
     - Amazon DynamoDB, Amazon ElastiCache, Amazon Neptune
-    - Google Bigtable, Google Cloud Datastore
+    - Google Cloud Datastore, Google Cloud Memorystore
     - Azure Table Storage, Azure Redis Cache
 3. **Events**
     - Amazon MQ, Amazon SQS, Amazon SNS
