Added Greg's image

--- a/2020.md
+++ b/2020.md
@@ -1,6 +1,8 @@
 ## 2020 Cloud Roadmap
 I would like to think of this file as a map that will hopefully help me guide through the sometimes maddening new and newer waves of technologies sloshing along the IT shores demanding attention! I created this to help me better understand the various services offered by the **Big 3** - [Azure](https://azure.microsoft.com), [AWS](https://aws.amazon.com) and [GCP](https://cloud.google.com)! There is a good chance I will not be able to go through every single one of these *points-of-interest* on the map any time soon. And that's ok. I just want to know I am not getting lost :wink:
 
+![GCP vs Amazon Web Services](https://us-east-1-anand-files.s3.amazonaws.com/gcp-aws.png)
+
 ### Identity & Security
 1. **Authentication and Authorization**
     - AWS Identity and Access Management (IAM), AWS Organizations, AWS Single Sign-On
@@ -135,7 +137,7 @@ I would like to think of this file as a map that will hopefully help me guide th
     - Amazon Machine Learning, Amazon Sagemaker, Apache MXNet on AWS, Tensorflow on AWS, AWS Deep Learning AMIs
     - Google Cloud Machine Learning
     - Azure Machine Learning, Azure Machine Learning Studio, Azure Data Science Virtual Machine
-2. **Conversational Services**
+2. **Conversational Services*gcloud*
     - Amazon Lex, Amazon Polly
     - Google Dialogflow Enterprise Edition, Google Cloud Speech API
     - Azure Cortana Intelligence Suite, Bing Speech API
